fix SecurityConfig and add JwtAuthenticationFilter